<?xml version="1.0"?>
<package format="2">
  <name>hero_chassis_controller</name>
  <version>0.1.0</version>
  <description>a chassis controller which can control hero's chassis in gazebo</description>
  <maintainer email="1536117624@qq.com">Zhenyu Ye</maintainer>
  <maintainer email="12331313@qq.com">Liya Cai</maintainer>
  <license>BSD</license>
  <author email="1536117624@qq.com">Zhenyu Ye</author>
  <author>Liya Cai</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>controller_interface</depend>
  <depend>forward_command_controller</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>control_toolbox</depend>
  <depend>rm_description</depend>
  <depend>geometry_msgs</depend>
  <depend>control_msgs</depend>>
  <depend>realtime_tools</depend>>

  <export>
    <controller_interface plugin="${prefix}/hero_chassis_controller_plugins.xml"/>
  </export>
</package>
